# scaile

./: .gitignore  bun.lockb  index.html  package.json
src/: style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  configuration.rs  macros.rs
src/pages/: About.vue  AdvancedOptionsDoc.vue  Index.vue
