[package]
name = "scaile"
version = "0.1.0"
description = "A Rust program that upscale images using the ESRGAN model."
authors = ["Ojas <ojaskavathe@gmail.com>"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
strip = true

[build-dependencies]
tauri-build = { version = "1.4.0", features = [] }

[dependencies]
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }
tauri = { version = "1.4.1", features = ["dialog-all", "fs-all", "notification-all", "os-all", "shell-all", "window-all"] }
base64 = "0.21.2"
dirs = "5.0.1"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
